--- a/requirements.txt
+++ b/requirements.txt
@@ -7,3 +7,6 @@ python-dotenv==1.0.1
 django-filter==23.5
 celery[redis]==5.3.6
 redis==5.0.1
+google-api-python-client==2.118.0
+django_cors_headers==4.3.1
+djangorestframework_simplejwt==5.3.1
